--- a/poisson.ipynb
+++ b/poisson.ipynb
@@ -71,7 +71,7 @@
     "    \\end{align*}\n",
     "    y otra para la función de la incógnita:\n",
     "    \\begin{align*}\n",
-    "        V_h\\subset \\widetilde{V}:=\\left\\{v\\in H(\\Omega): v=u_0 \\:\\text{sobre} \\: \\partial\\Omega\\right\\}.\n",
+    "        V_h\\subset V:=\\left\\{v\\in H(\\Omega): v=u_0 \\:\\text{sobre} \\: \\partial\\Omega\\right\\}.\n",
     "    \\end{align*}\n",
     "Tal que, el problema discreto es encontrar $u_h\\in V_h\\subset V$, tal que:\n",
     "    \\begin{align*}\n",
@@ -102,7 +102,7 @@
     "Introduciendo las funciones de test y de interpolación de la incógnita como polinomios a trozos:\n",
     "\\begin{align*}\n",
     "        v_h=&\\sum_i^n \\phi_i \\subset \\widetilde{V}_h\\subset \\widetilde{V}, &&\n",
-    "        u_h=&\\sum_j^n U_j\\phi_j \\subset V_h\\subset \\widetilde{V}.\n",
+    "        u_h=&\\sum_j^n U_j\\phi_j \\subset V_h\\subset V.\n",
     "    \\end{align*}\n",
     "La ecuación discreta resulta en:\n",
     "\\begin{align*}\n",
@@ -537,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
