--- a/elasticidad_lineal.ipynb
+++ b/elasticidad_lineal.ipynb
@@ -31,8 +31,8 @@
     "donde $\\boldsymbol{\\varepsilon}$ es el *tensor simetrico de la tasa de deformación*, $\\boldsymbol{I}$ denota el *tensor identidad*, $\\mathrm{tr}$ denota la *traza* en un tensor, $\\lambda$ y $\\mu$ \n",
     "son los *parametros de Lamé* (propiedades del material) y $\\rho$ es la densidad.\n",
     "\n",
-    "Si combinamos las ecuaciones (\\ref{ftut-elast-varform-stresstrain}) y\n",
-    "(\\ref{ftut-elast-varform-strainu}) podemos escribir el esfuerzo como\n",
+    "Si combinamos las ecuaciones ([2](#mjx-eqn-ftut-elast-varform-stresstrain})) y\n",
+    "([3](#mjx-eqn-ftut-elast-varform-strainu})) podemos escribir el esfuerzo como\n",
     "\\begin{equation}\n",
     "\\label{ftut-elast-varform-stressu}\\tag{4}\n",
     "\\boldsymbol{\\boldsymbol{\\sigma}} = \\lambda(\\boldsymbol{\\nabla}\\cdot \\boldsymbol{u})\\boldsymbol{I} + \\mu(\\boldsymbol{\\nabla} \\boldsymbol{u} + (\\boldsymbol{\\nabla} \\boldsymbol{u})^{\\top})\n",
@@ -63,7 +63,7 @@
     "\n",
     "$\\boldsymbol{\\sigma}\\cdot \\boldsymbol{n}$ es conocido como la *tracción* (el esfuerzo en el contorno) y puede ser usado para prescribir una condicion de contorno de tipo Neumann o Robin de forma $\\boldsymbol{\\sigma}\\cdot \\boldsymbol{n} = \\boldsymbol{T}$.\n",
     "\n",
-    "Reemplazando (\\ref{elast-varform-integbypart}) en (\\ref{elast-varform-variational})\n",
+    "Reemplazando ([6](#mjx-eqn-elast-varform-integbypart}) en ([5](#mjx-eqn-elast-varform-variational})\n",
     "\\begin{equation}\n",
     "\\int_\\Omega \\rho \\ddot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} + \\int_\\Omega \\rho \\eta \\dot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} + \\int_\\Omega \\boldsymbol{\\sigma} : \\boldsymbol{\\nabla} \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x} =\n",
     "\\int_\\Omega \\boldsymbol{f}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x} + \\int_{\\partial\\Omega} \\boldsymbol{T}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{s}.\n",
