--- a/elasticidad_lineal.ipynb
+++ b/elasticidad_lineal.ipynb
@@ -15,8 +15,8 @@
     "\n",
     "Escribimos el problema de deformación elastica de un cuerpo con dominio geométrico $\\Omega$ como\n",
     "\\begin{equation}\n",
-    "\\label{ftut-elast-varform-equilibrium}\\tag{1}\n",
     "\\rho \\ddot{\\boldsymbol{u}} + \\rho \\eta \\dot{\\boldsymbol{u}} - \\boldsymbol{\\nabla}\\cdot\\boldsymbol{\\sigma} = \\boldsymbol{f}\\hbox{ in }\\Omega,\n",
+    "\\label{ftut-elast-varform-equilibrium}\\tag{1}\n",
     "\\end{equation}\n",
     "\n",
     "definiendo $\\boldsymbol{\\sigma}$ como el *tensor de esfuerzos*, $\\boldsymbol{f}$ como la *fuerza de cuerpo por unidad de volumen* y $\\boldsymbol{u}$ como el *vector de desplazamientos*. Además, las derivadas temporales se denotan aquí con un punto sobre la variable.\n",
@@ -63,15 +63,14 @@
     "\n",
     "$\\boldsymbol{\\sigma}\\cdot \\boldsymbol{n}$ es conocido como la *tracción* (el esfuerzo en el contorno) y puede ser usado para prescribir una condicion de contorno de tipo Neumann o Robin de forma $\\boldsymbol{\\sigma}\\cdot \\boldsymbol{n} = \\boldsymbol{T}$.\n",
     "\n",
-    "Reemplazando ([6](#mjx-eqn-elast-varform-integbypart}) en ([5](#mjx-eqn-elast-varform-variational})\n",
+    "Combinando las 2 ecuaciones anteriores podemos escribir el problema variacional como\n",
+    "\n",
     "\\begin{equation}\n",
     "\\int_\\Omega \\rho \\ddot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} + \\int_\\Omega \\rho \\eta \\dot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} + \\int_\\Omega \\boldsymbol{\\sigma} : \\boldsymbol{\\nabla} \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x} =\n",
     "\\int_\\Omega \\boldsymbol{f}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x} + \\int_{\\partial\\Omega} \\boldsymbol{T}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{s}.\n",
-    "\\label{elast-varform-varform_original}\\tag{7}\n",
     "\\end{equation}\n",
     "\n",
-    "Donde usando la ecuacion ([4](#mjx-eqn-ftut-elast-varform-stressu)) para\n",
-    "$\\boldsymbol{\\sigma}$ podemos escribir la ecuación variacional para $\\boldsymbol{u}$ como incognita."
+    "Donde usando la definición de $\\boldsymbol{\\sigma}$ podemos escribir la ecuación variacional con $\\boldsymbol{u}$ como incognita."
    ]
   },
   {
@@ -80,11 +79,10 @@
    "source": [
     "### Parte simetrica de  $\\boldsymbol{\\nabla} \\boldsymbol{v}$\n",
     "\n",
-    "Ya que el producto de un tensor simetrico con un anti-simetrico es cero, y sabiendo que el tensor de esfuerzos $\\boldsymbol{\\sigma}$ es simetrico, podemos reemplazar en la ecuacion ([7](#mjx-eqn-elast-varform-varform_original)) $\\boldsymbol{\\nabla} \\boldsymbol{v}$ por su parte simétrica $\\boldsymbol{\\epsilon}(\\boldsymbol{v})$, dando como resultado\n",
+    "Ya que el producto de un tensor simetrico con un anti-simetrico es cero, y sabiendo que el tensor de esfuerzos $\\boldsymbol{\\sigma}$ es simetrico, podemos reemplazar en la ecuacion anterior $\\boldsymbol{\\nabla} \\boldsymbol{v}$ por su parte simétrica $\\boldsymbol{\\epsilon}(\\boldsymbol{v})$, dando como resultado\n",
     "\n",
     "\\begin{equation}\n",
     "\\int_\\Omega \\rho \\ddot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} + \\int_\\Omega \\rho \\eta \\dot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} + \\int_\\Omega \\boldsymbol{\\sigma} : \\boldsymbol{\\epsilon}(\\boldsymbol{v})\\ \\mathrm{d}\\boldsymbol{x} = \\int_\\Omega \\boldsymbol{f}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x} + \\int_{\\partial\\Omega} \\boldsymbol{T}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{s}\n",
-    "\\label{ftut-elast-varform-sigma_inner_gradv}\\tag{9}\n",
     "\\end{equation}"
    ]
   },
@@ -111,14 +109,14 @@
     "### Forma variacional \n",
     "En resumen, el problema variacional es el siguiente: encontrar $\\boldsymbol{u}$ en un espacio funcional vectorial $\\hat{V}$, tal que\n",
     "\\begin{equation}\n",
-    "m(\\boldsymbol{u},\\boldsymbol{v}) + c(\\boldsymbol{u},\\boldsymbol{v}) + a(\\boldsymbol{u},\\boldsymbol{v}) = L(\\boldsymbol{v})\\quad\\forall \\boldsymbol{v}\\in\\hat{V},\\tag{10}\n",
+    "m(\\boldsymbol{u},\\boldsymbol{v}) + c(\\boldsymbol{u},\\boldsymbol{v}) + a(\\boldsymbol{u},\\boldsymbol{v}) = L(\\boldsymbol{v})\\quad\\forall \\boldsymbol{v}\\in\\hat{V},\n",
     "\\end{equation}\n",
     "donde\n",
     "\\begin{align}\n",
-    "m(\\boldsymbol{u},\\boldsymbol{v}) &= \\int_\\Omega \\rho \\ddot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x},\\tag{11}\\\\\n",
-    "c(\\boldsymbol{u},\\boldsymbol{v}) &= \\int_\\Omega \\rho \\eta \\dot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x},\\tag{12}\\\\\n",
-    "a(\\boldsymbol{u},\\boldsymbol{v}) &= \\int_\\Omega\\sigma(\\boldsymbol{u}) :\\varepsilon(\\boldsymbol{v})\\ \\mathrm{d}\\boldsymbol{x},\\tag{13}\\\\\n",
-    "L(\\boldsymbol{v}) &= \\int_\\Omega \\boldsymbol{f}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x} + \\int_{\\partial\\Omega_T} \\boldsymbol{T}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{s}\\tag{14},\n",
+    "m(\\boldsymbol{u},\\boldsymbol{v}) &= \\int_\\Omega \\rho \\ddot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x},\\\\\n",
+    "c(\\boldsymbol{u},\\boldsymbol{v}) &= \\int_\\Omega \\rho \\eta \\dot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x},\\\\\n",
+    "a(\\boldsymbol{u},\\boldsymbol{v}) &= \\int_\\Omega\\sigma(\\boldsymbol{u}) :\\varepsilon(\\boldsymbol{v})\\ \\mathrm{d}\\boldsymbol{x},\\\\\n",
+    "L(\\boldsymbol{v}) &= \\int_\\Omega \\boldsymbol{f}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x} + \\int_{\\partial\\Omega_T} \\boldsymbol{T}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{s},\n",
     "\\end{align}"
    ]
   },
