--- a/elasticidad_lineal.ipynb
+++ b/elasticidad_lineal.ipynb
@@ -16,25 +16,20 @@
     "Escribimos el problema de deformación elastica de un cuerpo con dominio geométrico $\\Omega$ como\n",
     "\\begin{equation}\n",
     "\\rho \\ddot{\\boldsymbol{u}} + \\rho \\eta \\dot{\\boldsymbol{u}} - \\boldsymbol{\\nabla}\\cdot\\boldsymbol{\\sigma} = \\boldsymbol{f}\\hbox{ in }\\Omega,\n",
-    "\\label{ftut-elast-varform-equilibrium}\\tag{1}\n",
     "\\end{equation}\n",
     "\n",
     "definiendo $\\boldsymbol{\\sigma}$ como el *tensor de esfuerzos*, $\\boldsymbol{f}$ como la *fuerza de cuerpo por unidad de volumen* y $\\boldsymbol{u}$ como el *vector de desplazamientos*. Además, las derivadas temporales se denotan aquí con un punto sobre la variable.\n",
     "\n",
     "Restringiendo el problema a materiales isotrópicos, podemos definir el tensor de esfuerzos y su relación con las deformaciones como\n",
     "\\begin{align}\n",
-    "\\boldsymbol{\\sigma} &= \\lambda\\,\\hbox{tr}\\,(\\boldsymbol{\\varepsilon}) \\boldsymbol{I} + 2\\mu\\boldsymbol{\\varepsilon},\n",
-    "\\label{ftut-elast-varform-stresstrain}\\tag{2}\\\\\n",
+    "\\boldsymbol{\\sigma} &= \\lambda\\,\\hbox{tr}\\,(\\boldsymbol{\\varepsilon}) \\boldsymbol{I} + 2\\mu\\boldsymbol{\\varepsilon}, \\\\\n",
     "\\boldsymbol{\\varepsilon} &= \\frac{1}{2}\\left(\\boldsymbol{\\nabla} \\boldsymbol{u} + (\\boldsymbol{\\nabla} \\boldsymbol{u})^{\\top}\\right),\n",
-    "\\label{ftut-elast-varform-strainu}\\tag{3}\n",
     "\\end{align}\n",
     "donde $\\boldsymbol{\\varepsilon}$ es el *tensor simetrico de la tasa de deformación*, $\\boldsymbol{I}$ denota el *tensor identidad*, $\\mathrm{tr}$ denota la *traza* en un tensor, $\\lambda$ y $\\mu$ \n",
     "son los *parametros de Lamé* (propiedades del material) y $\\rho$ es la densidad.\n",
     "\n",
-    "Si combinamos las ecuaciones ([2](#mjx-eqn-ftut-elast-varform-stresstrain})) y\n",
-    "([3](#mjx-eqn-ftut-elast-varform-strainu})) podemos escribir el esfuerzo como\n",
+    "Si combinamos las definiciones de esfuerzo y deformación, podemos escribir el esfuerzo como\n",
     "\\begin{equation}\n",
-    "\\label{ftut-elast-varform-stressu}\\tag{4}\n",
     "\\boldsymbol{\\boldsymbol{\\sigma}} = \\lambda(\\boldsymbol{\\nabla}\\cdot \\boldsymbol{u})\\boldsymbol{I} + \\mu(\\boldsymbol{\\nabla} \\boldsymbol{u} + (\\boldsymbol{\\nabla} \\boldsymbol{u})^{\\top})\n",
     "\\end{equation}"
    ]
@@ -45,19 +40,17 @@
    "source": [
     "## Formulación variacional\n",
     "\n",
-    "La formulación variacional de ([1](#mjx-eqn-ftut-elast-varform-equilibrium)) la definimos como la integral sobre el dominio $\\Omega$ del producto interno entre la ecuación y una función vectorial de test $\\boldsymbol{v}\\in \\hat{V}$, donde $\\hat{V}$ es el espacio de la funcion de test.\n",
+    "La formulación variacional del problema de deformación elastica la definimos como la integral sobre el dominio $\\Omega$ del producto interno entre la ecuación y una función vectorial de test $\\boldsymbol{v}\\in \\hat{V}$, donde $\\hat{V}$ es el espacio de la funcion de test.\n",
     "\n",
     "\\begin{equation} \n",
-    "\\int_\\Omega \\rho \\ddot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} + \\int_\\Omega \\rho \\eta \\dot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} -\\int_\\Omega (\\boldsymbol{\\nabla}\\cdot\\boldsymbol{\\sigma}) \\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x} = \\int_\\Omega \\boldsymbol{f}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x},\\label{elast-varform-variational}\\tag{5}\n",
+    "\\int_\\Omega \\rho \\ddot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} + \\int_\\Omega \\rho \\eta \\dot{\\boldsymbol{u}} \\mathrm{d}\\boldsymbol{x} -\\int_\\Omega (\\boldsymbol{\\nabla}\\cdot\\boldsymbol{\\sigma}) \\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x} = \\int_\\Omega \\boldsymbol{f}\\cdot \\boldsymbol{v}\\ \\mathrm{d}\\boldsymbol{x},\n",
     "\\end{equation}\n",
     "\n",
     "Como $\\boldsymbol{\\nabla}\\cdot\\boldsymbol{\\sigma}$ contiene derivadas de segundo orden en $\\boldsymbol{u}$, debilitamos esta parte de la ecuación integrando por partes:\n",
     "\n",
     "\\begin{equation}\n",
     "-\\int_\\Omega (\\boldsymbol{\\nabla}\\cdot\\boldsymbol{\\sigma}) \\cdot \\boldsymbol{v} \\ \\mathrm{d}\\boldsymbol{x}\n",
-    "= \\int_\\Omega \\boldsymbol{\\sigma} : \\boldsymbol{\\nabla} \\boldsymbol{v} \\ \\mathrm{d}\\boldsymbol{x} - \\int_{\\partial\\Omega}\n",
-    "(\\boldsymbol{\\sigma}\\cdot \\boldsymbol{n})\\cdot \\boldsymbol{v} \\ \\mathrm{d}\\boldsymbol{s},\n",
-    "\\label{elast-varform-integbypart}\\tag{6}\n",
+    "= \\int_\\Omega \\boldsymbol{\\sigma} : \\boldsymbol{\\nabla} \\boldsymbol{v} \\ \\mathrm{d}\\boldsymbol{x} - \\int_{\\partial\\Omega} (\\boldsymbol{\\sigma}\\cdot \\boldsymbol{n})\\cdot \\boldsymbol{v} \\ \\mathrm{d}\\boldsymbol{s},\n",
     "\\end{equation}\n",
     "donde $\\boldsymbol{n}$ es vector normal en el contorno.\n",
     "\n",
